tests/ui/unboxed-closures/unboxed-closure-sugar-used-on-struct-1.stderr
error[E0214]: parenthesized type parameters may only be used with a `Fn` trait
  --> $DIR/unboxed-closure-sugar-used-on-struct-1.rs:8:16
   |
LL |     let x: Box<Bar()> = panic!();
   |                ^^^^^ only `Fn` traits may use parentheses

error[E0107]: struct takes 1 generic argument but 0 generic arguments were supplied
  --> $DIR/unboxed-closure-sugar-used-on-struct-1.rs:8:16
   |
LL |     let x: Box<Bar()> = panic!();
   |                ^^^ expected 1 generic argument
   |
note: struct defined here, with 1 generic parameter: `A`
  --> $DIR/unboxed-closure-sugar-used-on-struct-1.rs:3:8
   |
LL | struct Bar<A> {
   |        ^^^ -
help: add missing generic argument
   |
LL |     let x: Box<Bar(A)> = panic!();
   |                    +

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0107, E0214.
For more information about an error, try `rustc --explain E0107`.
